--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                             <div class="person">
                                 <center>
                                     <img src="./assets/images/reema.jpg" alt="Abhiram" class="rounded-circle mr-2">
-                                <h5 class="mb-0">Remma Jalihal</h5>
+                                <h5 class="mb-0">Reema Jalihal</h5>
                                 <p class="mb-0">Assistant Professor</p>
                                 <p class="mb-0">St.Aloysius College[Autonomous]</p>
                                 </center>
