Update index.html [ resume update ]

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div data-aos="fade-up" data-aos-delay="600" class="d-flex flex-column">
                             <a href="#work" class="btn btn-brand me-3">Explore My Work</a>
                             <br>
-                            <a href="assets/cv/Nathan Resume.pdf" download class="btn btn-brand me-3">Download Resume</a>
+                            <a href="assets/cv/Nathan Resumeen.pdf" download class="btn btn-brand me-3">Download Resume</a>
                            <br> <a href="#" class="link-custom">Call: +917259733446</a>
 
                             <left class="text-left mb-3 mb-md-0"><br>
