--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="row pb-4" data-aos="fade-up">
                     <div class="col-lg-8">
                         
-                        <h1>What I want to do..</h1>
+                        <h1>What I want to do.</h1>
                     </div>
                 </div>
 
@@ -195,7 +195,7 @@
                                  on how to effectively secure them against potential threats.
                                   I'm eager to learn more about ethical hacking and how to apply
                                  it to safeguard against data breaches and other 
-                                 serious consequences./p>
+                                 serious consequences.
                       
                         </div>
                     </div>
